Fix TypeScript SVG errors and improve admin panel
TypeScript Fixes:
- Fix SVGSVGElement type assertions for arrow elements
- Replace HTMLElement with SVGSVGElement for svg queries
- Resolve type conversion errors in mobile dropdown

Admin Panel Improvements:
- Add debug logging for Netlify Identity
- Add error handling for Identity widget
- Add ready state logging for troubleshooting
- Improve Identity error detection

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -20,6 +20,18 @@
           });
         }
       });
+      
+      // Debug: Check if Git Gateway is properly configured
+      window.netlifyIdentity.on("ready", () => {
+        console.log("Netlify Identity ready");
+        if (window.netlifyIdentity.currentUser()) {
+          console.log("User logged in:", window.netlifyIdentity.currentUser().email);
+        }
+      });
+      
+      window.netlifyIdentity.on("error", err => {
+        console.error("Netlify Identity error:", err);
+      });
     }
   </script>
 </body>
