Simplify Netlify Identity setup for manual confirmation
- Remove complex Identity widget component
- Remove unused confirmation/invite templates
- Simplify admin panel with basic Identity widget
- Add sezani991@gmail.com to allowed emails whitelist
- Focus on manual user confirmation approach
- Prepare for step-by-step Netlify Identity reset

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -45,7 +45,8 @@
         // Security check: Only allow specific emails or admin role
         const allowedEmails = [
           'turkelwebsite@gmail.com',
-          'admin@turkel.com.tr'
+          'admin@turkel.com.tr',
+          'sezani991@gmail.com'
           // Buraya sadece admin olabilecek email'leri ekle
         ];
         
