--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -8,24 +8,12 @@
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
-  <!-- Loading message -->
-  <div id="loading" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); font-family: Arial, sans-serif; text-align: center;">
-    <h2>Türkel CMS Yükleniyor...</h2>
-    <p>Lütfen bekleyiniz...</p>
-  </div>
+
   
   <!-- Include the script that builds the page and powers Decap CMS -->
   <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   
   <script>
-    // Hide loading when CMS loads
-    document.addEventListener('DOMContentLoaded', () => {
-      setTimeout(() => {
-        const loading = document.getElementById('loading');
-        if (loading) loading.style.display = 'none';
-      }, 2000);
-    });
-
     if (window.netlifyIdentity) {
       window.netlifyIdentity.on("init", user => {
         console.log("Identity init, user:", user ? user.email : "No user");
@@ -71,9 +59,9 @@
           return;
         }
         
-        // Close widget and reload page
+        // Close widget but DON'T reload if already on admin page
         window.netlifyIdentity.close();
-        window.location.reload();
+        console.log("✅ Login completed, user authorized");
       });
       
       window.netlifyIdentity.on("signup", user => {
