Remove max-width constraint from AppMainContainer
SPECIFIC CLASS TARGET:
- .css-1fehwpo-AppMainContainer.eh2m33j2 max-width removed
- Force width: 100% for full space utilization
- Remove CMS default width constraints
- Allow content to use full available width

LAYOUT IMPROVEMENT:
- Content no longer stacked vertically due to width constraints
- Full horizontal space utilization
- Better content organization
- No more cramped content layout

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -54,11 +54,19 @@
       left: 0 !important;
     }
     
+    /* App Main Container - max-width kaldır, geniş yap */
+    .css-1fehwpo-AppMainContainer.eh2m33j2,
+    [class*="css-"][class*="AppMainContainer"] {
+      max-width: none !important;
+      width: 100% !important;
+      flex: 1 !important;
+    }
+    
     /* Main content - sidebar'dan etkilenmesin */
     .css-kg0ufi-CollectionMain.e1sogrfi2,
     [class*="css-"][class*="CollectionMain"] {
       max-width: none !important;
-      width: calc(100% - 280px) !important;
+      width: 100% !important;
       margin-left: 0 !important;
       padding: 0 !important;
       flex: 1 !important;
