fix: CMS fuar listesi butonları geri getirildi
🔧 Icon Gizleme Sorunu Çözüldü:
- Gereksiz icon gizleme CSS'leri kaldırıldı
- Sadece preview panel gizli kalıyor
- Fuar listesi butonları (açma/kapama, silme) görünür
- Dropdown okları ve tüm işlevsel butonlar aktif

✅ Çalışan Özellikler:
- Config seviyesinde preview kapalı (editor.preview: false)
- Fuar listesi tam fonksiyonel
- 3 slider fuarı CMS'ten başarıyla alınıyor
- Tüm CRUD işlemleri çalışıyor

🎯 Minimal Yaklaşım:
- En az müdahale, maksimum işlevsellik
- Sadece preview gizli, geri kalan her şey normal
- CMS kullanılabilirliği korundu

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -158,10 +158,7 @@
       display: none !important;
     }
     
-    /* Preview toggle butonunu gizle */
-    [class*="IconWrapper"]:has(svg) {
-      display: none !important;
-    }
+    /* Hiç icon'a dokunma, sadece preview'ı gizle */
   </style>
 </body>
 </html>
