fix: CMS buton tasarımı düzeltildi
✅ public/admin/index.html: CSS düzeltmesi eklendi
✅ .css-19erytg-CollectionTopNewButton sınıfı override edildi
✅ height: auto + min-height: 32px + padding düzeltildi

🎯 Sonuç:
- CMS admin panelindeki butonlar daha iyi görünecek
- 36px sabit yükseklik kaldırıldı
- Responsive tasarım iyileştirildi

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -269,6 +269,13 @@
     }
     
     /* Hiç icon'a dokunma, sadece preview'ı gizle */
+    
+    /* CMS buton yükseklik düzeltmesi */
+    .css-19erytg-CollectionTopNewButton-button-button-default-default-gray-gray {
+      height: auto !important;
+      min-height: 32px !important;
+      padding: 8px 16px !important;
+    }
   </style>
 </body>
 </html>
